# voice.thienhang.com

./: .gitignore  CNAME  Dockerfile  README.md  __init__.py  a.py  build.sh  config.env  dataset.txt  docker-compose.yaml  index.html  preprocess.py  processed_data.json  pyproject.toml  request.py  run.sh  server.py  setup.py  synthesize.py  test.py  train.py
config/: config.yaml
db_data/: postmaster.pid
db_data/base/1/: 1259  13407  2619  2619_vm  2696  pg_internal.init
db_data/base/16384/: 1247  1249  1249_fsm  1259  1259_fsm  13407  16389  16390  16397  16399  16420  16421  16442  16450  16453  16461  16478  16489  16490  16496  16497  16508  16509  16516  16527  16528  16539  16541  16547  16558  16559  16567  16571  16573  16574  16580  16585  16592  16598  16605  (+37 more)
db_data/base/4/: 2619
db_data/base/5/: pg_internal.init
db_data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
examples/: index.html  script.js
minio/: docker-compose.yaml  run.sh
minio_data/.minio.sys/: format.json
mlflow/: Dockerfile  config.env
mlflow-minio-setup/: docker-compose-existing-minio.yml
open-meta/: README.md  run.sh
open-meta/docker-volume/db-data/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  (+3 more)
public/: index.html  script.js
src/services/: __init__.py
src/tests/: test.py
src/tts/: __init__.py  download.py  wrapper.py
src/utils/: info.py  parse.py
static/: chat.html  script.js  styles.css
tian_voice/tts/: __init__.py  download.py  wrapper.py
(+325 files in other folders)
