[tool.poetry]
name = "tian_voice_recognition"
version = "0.1.1"
description = "python.thienhang.com"
authors = ["open-thienhang-com"]
readme = "README.md"
packages = [{ include = "tian_voice" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn server:app --host 0.0.0.0 --port 8000 --reload"